feat(arena): add complete in-game arena editor